[package]
name = "jyx"
version = "0.1.0-beta1"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "Generic types for unstructured data"
repository = "https://github.com/proctorlabs/unstructured-rs"
keywords = ["unstructured", "data"]
categories = ["data-structures", "encoding", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
unstructured = "0.2.0-pre1"
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
