[package]
name = "jyx"
version = "0.1.0-beta1"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "Command line tool for manipulating data structures"
repository = "https://github.com/proctorlabs/unstructured-rs"
keywords = ["jyx", "unstructured", "data", "cli"]
categories = ["command-line-interface", "data-structures", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
structopt = "0.2"
unstructured = "0.2.0-pre1"
serde_any = "0.5"
