[package]
name = "jyx"
version = "0.3.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "Command line tool for manipulating data structures"
repository = "https://github.com/proctorlabs/unstructured-rs"
keywords = ["jyx", "unstructured", "data", "cli"]
categories = ["command-line-interface", "data-structures", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
structopt = "0.2"
clap = "2.33"
unstructured = { version = "0.3.0", path = "../unstructured" }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde-xml-rs = "0.3"
toml = "0.5"
