[package]
name = "unstructured"
description = "Generic types for unstructured data"
repository = "https://github.com/proctorlabs/unstructured-rs"
version = "0.5.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["unstructured", "data"]
categories = ["data-structures", "encoding", "parsing"]
license = "MIT"
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ordered-float = "2.0"
pest = { version = "2.1", optional = true }
pest_derive = { version = "2.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
rstest = "0.6"

[features]
default = ["selector"]
selector = ["pest", "pest_derive"]

[lib]
name = "unstructured"
path = "src/lib.rs"

[badges]
maintenance = { status = "passively-maintained" }
